--- a/package.json
+++ b/package.json
@@ -2,15 +2,42 @@
   "name": "threejs-creative-space",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start:portfolio-shapes": "npx nx serve portfolio-shapes"
+  },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "core-js": "^3.6.5",
+    "regenerator-runtime": "0.13.7",
+    "three": "^0.148.0",
+    "tslib": "^2.3.0"
+  },
   "devDependencies": {
+    "@nrwl/cypress": "15.5.1",
+    "@nrwl/eslint-plugin-nx": "15.5.1",
     "@nrwl/js": "15.4.5",
+    "@nrwl/linter": "15.5.1",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/vite": "15.5.1",
+    "@nrwl/web": "15.5.1",
     "@nrwl/workspace": "15.4.5",
+    "@types/node": "18.7.1",
+    "@types/three": "^0.148.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "@vitest/coverage-c8": "~0.25.8",
+    "@vitest/ui": "^0.25.8",
+    "cypress": "^12.2.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "jsdom": "~20.0.3",
     "nx": "15.4.5",
     "prettier": "^2.6.2",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "vite": "^4.0.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.25.8"
   }
 }
